@@ -346,6 +346,21 @@ FILES
             Enable or disable alternative algorithm for calculating terminal
             positioning.
 
+        command_pre =
+        command_post =
+            Add extra commands around the communication method. For example:
+
+            command_pre= . $HOME/virtualenvs/default/bin/active ;
+            command_post= | ct
+
+            would allow for using Python virtual envronments and then piping
+            all shell output through "chromaterm" for syntax highlighting.
+            Note: you must use appropriate command separators/terminators to
+            keep the meaning of the command pipline (such as ";" and "|"
+            between commands).
+
+            These are not put through macro parsing.
+
         comms = ssh
             Sets the default communication method (initially taken from the
             name of the program, but can be overridden here).
